# higgs-audio

./: README.md  requirements_v.txt
examples/voice_prompts/: socrates.txt
resultado_narracion/05082025_171259/: 05082025_171259_log.json
serve_app/: app.py  app_gem.py  constraints.txt  pyproject.toml  requirements.txt
serve_app/src/higgs_audio_app/: app.py
serve_app/src/voice_examples/: config.json
serve_app/voice_examples/: socrates.txt
